--- a/conf/workflows/default/app.json
+++ b/conf/workflows/default/app.json
@@ -1,6 +1,6 @@
 {
   "title": "ImageGen(SD 1.5)",
-  "description": "Generate images from prompt with SD 1.5",
+  "description": ":book: Generate images from prompt with SD 1.5",
   "inputs": {
     
     "6": {
