--- a/conf/workflows/sdxl_basic/app.json
+++ b/conf/workflows/sdxl_basic/app.json
@@ -1,6 +1,6 @@
 {
     "title": "ImageGen(SDXL)",
-    "description": "Generate images from prompt with SDXL",
+    "description": "✈️ Generate images from prompt with SDXL",
     "inputs": {
       "17": {
         "inputs": {
