--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-loguru
-SQLAlchemy
-streamlit
-streamlit-extras
-st-pages
+loguru>=0.7.0
+SQLAlchemy>=1.4.39
+streamlit>=1.27.2
+streamlit-extras>=0.3.4
