fix: output node, only support SaveImage

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,7 @@ __pycache__/
 .uploads/*
 .devcontainer/*
 .comfyflow/*
-
-manager/comfyflow.db
-manager/public/*
-manager/module/*
-manager/.streamlit/*
-.comfyflow_apps/*
+maanager/__pycache__/*
+.apps/*
+comfyflow.db
 ```
