--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "stduio/repositories/ComfyUI"]
-	path = studio/repositories/ComfyUI
+[submodule "repositories/ComfyUI"]
+	path = repositories/ComfyUI
 	url = https://github.com/xingren23/ComfyUI
