--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "repositories/ComfyUI"]
 	path = repositories/ComfyUI
-	url = https://github.com/xingren23/ComfyUI
+	url = https://github.com/xingren23/ComfyUI.git
+[submodule "ComfyUI"]
+	path = ComfyUI
+	url = https://github.com/xingren23/ComfyUI.git
