exchange mode by env var; support three model: Creator/Studio/Explore

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -3,5 +3,7 @@ DISCORD_CLIENT_ID="1163088920305737728"
 DISCORD_CLIENT_SECRET="hdqis8gZ9YVvvM-qxAbYApd6ai40nBlk"
 DISCORD_REDIRECT_URI="http://localhost:8501"
 
+# mode： Creator/Studio/Explore
+
 [connections.comfyflow_db]
 url = "sqlite:///comfyflow.db"
