--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 loguru==0.7.0
 SQLAlchemy>=1.4, <2.0
-streamlit>=1.27.2
+streamlit==1.27.2
 streamlit-extras==0.3.4
 websocket-client==0.58.0
 psutil==5.9.5
